mentioned my own changes to the stylesheet

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $ git checkout gh-pages
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/JohanSamyn">JohanSamyn</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages<br>Theme by <a href="https://github.com/orderedlist">orderedlist</a> &mdash;<br>(slightly edited by <a href="https://github.com/JohanSamyn">JohanSamyn</a>)</p></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
